fixed get book by user id
